# openclaw-consensus-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  pyproject.toml  server.json  smithery.yaml  submission_kit.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: maintainer-workflow.md
src/openclaw_consensus/: __init__.py  client.py  server.py
tests/: test_smoke.py
